@@ -48,6 +48,16 @@ We'll add it back when project opening functionality is working.
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
             <version>0.11.2</version>
@@ -115,6 +125,13 @@ We'll add it back when project opening functionality is working.
                     <argLine>
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.prism=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                        --add-exports javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
+                        --add-exports javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-exports org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
                         --add-exports org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED
                         --add-exports javafx.controls/javafx.scene.control=ALL-UNNAMED
@@ -126,6 +143,13 @@ We'll add it back when project opening functionality is working.
                         --add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED
                         --add-opens javafx.base/javafx.collections=ALL-UNNAMED
                         --add-opens javafx.base/javafx.beans=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.prism=ALL-UNNAMED
+                        --add-opens javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                        --add-opens javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
+                        --add-opens javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-opens org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
                         --add-opens org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
@@ -196,6 +220,20 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED</option>
@@ -209,6 +247,20 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.base/javafx.collections=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.base/javafx.beans=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED</option>
                         <option>--add-opens</option>
@@ -256,6 +308,20 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED</option>
@@ -269,6 +335,20 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.base/javafx.collections=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.base/javafx.beans=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED</option>
                         <option>--add-opens</option>
